joy of painting compat